# vox

./: Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  build.sh
.github/workflows/: release.yml
examples/: test_stt.rs
src/: audio.rs  keys.rs  main.rs  models.rs  stt.rs  tray.rs  uinput.rs
